# Compo

./: .gitignore  .gitmodules
build-src-Desktop-Default/: CMakeCache.txt  Compo  Compo.cbp  CompoC  CompoENV  Makefile  cmake_install.cmake
build-src-Desktop-Default/compiler/parser/tanuki/: Makefile  Tanuki.cbp  cmake_install.cmake
misc/examples/: Counter.compo
src/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  compilermain.cpp  envmain.cpp  idemain.cpp
src/compiler/parser/: ast.h  parse.cpp  parse.h  tokens.cpp  tokens.h
src/execution/env/: descriptor.cpp  descriptor.h  env.h  protoport.cpp  protoport.h  protoprovidedport.cpp  protoprovidedport.h  protorequiredport.cpp  protorequiredport.h
src/execution/interpreter/: interpreter.h
src/execution/vm/: machine.h
src/metamodel/: component.cpp  component.h  descriptor.cpp  descriptor.h  protocomponent.cpp  protocomponent.h  protoport.cpp  protoport.h  protoprovidedport.cpp  protoprovidedport.h  protorequiredport.cpp  protorequiredport.h
